fix: regionをTSOAに合わせて修正
